2007-01-05  Guillaume Melquiond <guillaume.melquiond@gmail.com>

	* src/net/gameserver/player.h, src/net/gameserver/player.cpp,
	src/net/protocol.h, src/localplayer.cpp: Implemented item dropping.

2007-01-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/map.cpp, src/map.h: Declared some methods const.

2007-01-03  Guillaume Melquiond <guillaume.melquiond@gmail.com>

	* src/resources/mapreader.cpp: Fixed memory leak on error.
	* src/net/protocol.h, src/net/itemhandler.cpp: Added support for items
	dropped on map.
	* src/gui/itemcontainer.cpp, src/inventory.cpp: Fixed inventory bounds.
	* src/localplayer.cpp, src/net/inventoryhandler.cpp,
	src/net/gameserver/player.h, src/net/gameserver/player.cpp,
	src/net/protocol.h: Added item pick-up.

2007-01-01  Guillaume Melquiond <guillaume.melquiond@gmail.com>

	* src/being.h, src/being.cpp, src/game.cpp: Made getSpriteDirection
	public and trivial. Removed getDirection: its return value does not
	match what the user sees, so its use is dubious from a user-interface
	point of view.

2006-12-31  Guillaume Melquiond <guillaume.melquiond@gmail.com>

	* src/being.h, src/being.cpp, src/joystick.h: Scrapped static const
	integral members and replaced them with enumerations.
	* src/gui/viewport.cpp: Removed unused variable.

2006-12-31  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/being.cpp: Added some variable definitions since they were
	reported missing by the linker.

2006-12-30  Guillaume Melquiond <guillaume.melquiond@gmail.com>

	* src/being.h, src/being.cpp: Improved movement smoothness by avoiding
	useless changes of sprite direction. Reduced field of direction
	components from 180° to 120° when computing being direction.
	* src/localplayer.cpp: Changed attack message to send the direction
	the player is visually facing. Removed check on beings when setting an
	absolute destination.
	* src/net/accountserver/account.h, src/net/accountserver/account.cpp,
	src/net/protocol.h, src/net/playerhandler.cpp: Updated protocol.
