@@ -151,6 +151,7 @@ enum {
     PGMSG_DROP                     = 0x0111, // B slot, B amount
     PGMSG_EQUIP                    = 0x0112, // B slot
     GPMSG_INVENTORY                = 0x0120, // { B slot, W item id [, B amount] }*
+    GPMSG_INVENTORY_FULL           = 0x0121, // { B slot, W item id [, B amount] }*
     GPMSG_BEING_ENTER              = 0x0200, // B type, W being id
                                              // player: S name, B hair style, B hair color, B gender
                                              // monster: W type id
